// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return correctly with tsconfig (filename) 1`] = `
Object {
  "allowSyntheticDefaultImports": true,
  "configFilePath": undefined,
  "declaration": true,
  "module": 1,
  "strict": true,
  "target": 2,
}
`;

exports[`should return correctly with tsconfig (raw-options) 1`] = `
Object {
  "module": 1,
  "strict": true,
  "target": 2,
}
`;

exports[`should throw error if parse tsconfig failed 1`] = `
"Unexpected error(s) while parsing tsconfig (/Users/ikatyang/Documents/GitHub/dts-jest/fixtures/load-compiler-options/invalid/tsconfig.json):

  Argument for '--lib' option must be: 'es5', 'es6', 'es2015', 'es7', 'es2016', 'es2017', 'esnext', 'dom', 'dom.iterable', 'webworker', 'scripthost', 'es2015.core', 'es2015.collection', 'es2015.generator', 'es2015.iterable', 'es2015.promise', 'es2015.proxy', 'es2015.reflect', 'es2015.symbol', 'es2015.symbol.wellknown', 'es2016.array.include', 'es2017.object', 'es2017.sharedmemory', 'es2017.string', 'es2017.intl', 'esnext.asynciterable'."
`;

exports[`should throw error if there are some invalid values 1`] = `
"Unexpected error(s) while loading compiler options:

  Argument for '--module' option must be: 'none', 'commonjs', 'amd', 'system', 'umd', 'es6', 'es2015', 'esnext'.
  Argument for '--target' option must be: 'es3', 'es5', 'es6', 'es2015', 'es2016', 'es2017', 'esnext'."
`;
